syntax = "proto3";

package main;

message RPCInput {
    string serviceName    = 1;
    string methodName     = 2;
    bytes  requestBuffer  = 3;
    map<string, string> headers = 4;
}

message RPCOutput {
    sint32 retCode        = 1;
    bytes  responseBuffer = 2;
    map<string, string> headers = 3;
}

message ServerPush {
    sint32 messageType    = 1;
    bytes  pushBuffer     = 2;
    map<string, string> headers = 3;
}
